@@ -41,12 +41,6 @@ class ConfigDeviceNotFoundError(ConfigException):
         self.model_dev = model_dev
         self.message = "No matching device found for \"%s\"" % model_dev
 
-class ConfigBadNidMapError(ConfigException):
-    def __init__(self, nodes, nids):
-        self.nodes = nodes
-        self.nids = nids
-        self.message = "Erroneous NID map : %s -> %s" % (self.nodes, self.nids)
-
 class ConfigInvalidFileSystem(ConfigException):
     """Error indicating the filesystem configuration is not correct."""
     def __init__(self, fs, message):
