@@ -1,3 +1,6 @@
+2010-09-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Supports multiple nids per server and --network option (#74).
+
 2010-09-22  Stephane Thiell  <stephane.thiell@cea.fr>
 	* shine command man page update.
 
